<?xml version="1.0"?>
<package format="2">
  <name>ros_ais</name>
  <version>0.0.0</version>
  <description>The ros_ais package</description>


  <maintainer email="enrico.schuetz@campus.tu-berlin.de">oem</maintainer>



  <license>BSD</license>





  <author email="enrico.schuetz@campus.tu-berlin.de">Enrico Schuetz</author>
  <author email="jochen.gallep@tu-berlin.de">Jochen Gallep</author>




  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
